// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TikTok Video Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-l75mtb e9q819x0"
  >
    <iframe
      allow="encrypted-media;"
      allowfullscreen=""
      class="css-1ep18qv e9q819x1"
      src="https://www.tiktok.com/embed/v2/6718335390845095173"
      title="Embedded TikTok Video"
    />
  </div>
</DocumentFragment>
`;

exports[`TikTok Video Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-l75mtb e9q819x0"
  >
    <iframe
      allow="encrypted-media;"
      allowfullscreen=""
      class="css-1ep18qv e9q819x1"
      src="https://www.tiktok.com/embed/v2/6718335390845095173"
      title="Embedded TikTok Video"
    />
  </div>
</DocumentFragment>
`;
